fn main() {
    tonic_build::configure()
        .build_server(false)
        .compile(
            &[
                "../../proto/config.proto",
                "../../proto/events.proto",
                "../../proto/filters.proto",
                "../../proto/general.proto",
                "../../proto/hotkeys.proto",
                "../../proto/inputs.proto",
                "../../proto/media_inputs.proto",
                "../../proto/outputs.proto",
                "../../proto/profiles.proto",
                "../../proto/projectors.proto",
                "../../proto/recording.proto",
                "../../proto/replay_buffer.proto",
                "../../proto/scene_collections.proto",
                "../../proto/scene_items.proto",
                "../../proto/scenes.proto",
                "../../proto/sources.proto",
                "../../proto/streaming.proto",
                "../../proto/transitions.proto",
                "../../proto/virtual_cam.proto",
            ],
            &["../../proto"],
        )
        .unwrap();
}
